# trajectory_planner_utils

./: .gitignore  CMakeLists.txt  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  VISUALIZATION_GUIDE.md  build.sh  test_all.sh  verify.sh
examples/: CMakeLists.txt  example_comparison.cpp  example_double_s.cpp  example_multi_dof.cpp  example_stage1_unified_core.cpp  example_stage2_unified_sas.cpp  example_stage3_unified_cl.cpp  example_straight_trajectory.cpp  example_trapezoidal.cpp  example_visualization.cpp
examples/data/: cl_generation_normalized.yaml  cl_generation_spliced.yaml  cl_segments.yaml  cl_spliced_config.yaml
include/vp/: double_s_planner.h  multi_velocity_planner.h  planner_exception.h  trajectory_planning.h  trapezoidal_planner.h  velocity_planner_interface.h  velocity_planning.h
include/vp/common/: common_functions.h  dbg.h  load_yaml.h  motionTransform.h  rigidBodyMotion.h  runtimeCommon.h  std_io.h  utility.h
include/vp/common/spdlog/: spdlog.h
include/vp/curve_interface/: constant_jerk_trajectory.h  curve_interface.h  piecewise_trajectory.h
include/vp/geometry_trajectory/: straight_trajectory.h
include/vp/trajectory_plan/: traj.h  traj_circle_line.h  traj_io_std.h
include/vp/trajectory_plan/cl/: circleLineTrajGeneration.h  circle_line_traj_planner_interface.h  normalizedCircleLineTrajPlanner.h  splicedCircleLineTrajPlanner.h  traj_cl.yaml  traj_cl2.yaml  traj_cl_changed_xyz.yaml
include/vp/trajectory_plan/geometry_trajectory/circle_trajectory/: CircleTrajectory.h
include/vp/trajectory_plan/geometry_trajectory/ellipse_trajectory/: EllipseTrajectory.h
include/vp/trajectory_plan/geometry_trajectory/sas_trajectory/: multiPointsTrajectory.h  sasArcTimeNonUniformTraj.h  sasTimeUniformTraj.h  sasTrajectory.h  sas_segments.h  variableTimeSlice.h
include/vp/trajectory_plan/geometry_trajectory/straight_arc_transition/: StraightArcTransition.h
include/vp/trajectory_plan/geometry_trajectory/straight_trajectory/: straightTrajectory.h  straightTrajectoryAgileX.h
include/vp/trajectory_plan/velocity_planning/: VelocityPlannerCompat.h  velocity_planner_interface.h
include/vp/trajectory_plan/velocity_planning/trapezoidal_velocity_trajectory/: TrapezoidalVelocityTrajectory.h
src/: multi_velocity_planner.cpp
src/curve_interface/: constant_jerk_trajectory.cpp  piecewise_trajectory.cpp
src/double_s/: double_s_planner.cpp
src/geometry_trajectory/: straight_trajectory.cpp
src/trajectory_plan/: traj.cpp  traj_arc_utils.cpp  traj_basic.cpp  traj_circle_line.cpp  traj_io_std.cpp
src/trajectory_plan/cl/: circleLineTrajGeneration.cpp  normalizedCircleLineTrajPlanner.cpp  splicedCircleLineTrajPlanner.cpp
src/trajectory_plan/geometry_trajectory/circle_trajectory/: CircleTrajectory.cpp
src/trajectory_plan/geometry_trajectory/ellipse_trajectory/: EllipseTrajectory.cpp
src/trajectory_plan/geometry_trajectory/sas_trajectory/: multiPointsTrajectory.cpp  sasArcTimeNonUniformTraj.cpp  sasTimeUniformTraj.cpp  sasTrajectory.cpp  sas_segments.cpp
src/trajectory_plan/geometry_trajectory/straight_arc_transition/: StraightArcTransition.cpp
src/trajectory_plan/geometry_trajectory/straight_trajectory/: straightTrajectory.cpp  straightTrajectoryAgileX.cpp
src/trajectory_plan/velocity_planning/: VelocityPlannerCompat.cpp
src/trajectory_plan/velocity_planning/trapezoidal_velocity_trajectory/: TrapezoidalVelocityTrajectory.cpp
src/trapezoidal/: trapezoidal_planner.cpp
